qhouyee/89/server-side-filters: include event id for task level queries to ensure distinguish different tasks from the same contract